#serve gestore tempo? non possiamo semplicemente far prendere l'orario agli altri gestori che ne hanno bisogno?

from datetime import datetime
from Models.Timer import Timer

class GestoreTempo:
    def __init__(self):
        pass
